creating models and database

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=LAPT-PLZ91958;TrustServerCertificate=True;Initial Catalog=Moviehub-db;Integrated Security=True;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
