--- a/MovieHub.csproj
+++ b/MovieHub.csproj
@@ -56,6 +56,7 @@
     <PackageReference Include="System.Text.Json" Version="7.0.3" />
     <PackageReference Include="System.Threading.Channels" Version="7.0.0" />
     <PackageReference Include="System.Windows.Extensions" Version="7.0.0" />
+    <PackageReference Include="Wisej-3-BootstrapIcons" Version="3.2.2" />
   </ItemGroup>
 
 </Project>
