--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=LAPT-PLZ91958;TrustServerCertificate=True;Initial Catalog=Moviehub-db;Integrated Security=True;Pooling=False"
   },
+  "PayPal": {
+    "clientId": "AVE7ihIvriVGauIhvBAMnY5i8GA1oawG2GekT_OwRX42kNC0sUm_EROCeQMIwX1BjN3GKiFYKUfQBqXh",
+    "clientSecret": "ENmtYVtqZ0NQVan4xWZLYu1QKHaz-d5B3BP4QFsOnmar6rVg4Z7PKhEJb2-EWpa19SGU5X7grLDxLXIV"
+  },
   "AllowedHosts": "*"
 }
