--- a/MovieHub.csproj
+++ b/MovieHub.csproj
@@ -16,7 +16,9 @@
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="IdentityModel" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
+    <PackageReference Include="Microsoft.AspNet.WebHooks.Receivers.Paypal" Version="1.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Connections.Abstractions" Version="7.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.6.0" />
@@ -43,8 +45,16 @@
     <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
     <PackageReference Include="Optivem.Framework.Infrastructure.FluentValidation" Version="1.0.23" />
+    <PackageReference Include="PayPal" Version="1.9.1" />
+    <PackageReference Include="PayPal.Api" Version="1.0.6" />
+    <PackageReference Include="PayPal.SDK.NETCore" Version="1.9.1.2" />
+    <PackageReference Include="PayPalButtonManagerSDK" Version="2.10.109" />
+    <PackageReference Include="PayPalCoreSDK" Version="1.7.1" />
+    <PackageReference Include="PayPalHttp" Version="1.0.1" />
+    <PackageReference Include="PayPalMerchantSDK" Version="2.16.250" />
     <PackageReference Include="Polly" Version="7.2.4" />
     <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Stripe.net" Version="41.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
@@ -56,6 +66,7 @@
     <PackageReference Include="System.Text.Json" Version="7.0.3" />
     <PackageReference Include="System.Threading.Channels" Version="7.0.0" />
     <PackageReference Include="System.Windows.Extensions" Version="7.0.0" />
+    <PackageReference Include="Vendr.PaymentProviders.PayPal" Version="2.0.1" />
     <PackageReference Include="Wisej-3-BootstrapIcons" Version="3.2.2" />
   </ItemGroup>
 
